force-app/main/default/objects/Waste_Generated__c/Waste_Generated__c.object-meta.xml
<CustomObject>
    <label>Waste Generated</label>
    <nameField>
        <label>Waste Generated Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Waste Generated</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>