force-app/main/default/objects/Waste_Generated__c/fields/Migration_Status__c.field-meta.xml
<CustomField>
    <fullName>Migration_Status__c</fullName>
    <label>Migration Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Error Occurred</fullName>
            </value>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Partial Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>