force-app/main/default/objects/Waste_Generated__c/fields/Organization_Asset__c.field-meta.xml
<CustomField>
    <fullName>Organization_Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Organization Asset</label>
    <referenceTo>sustain_app__Asset__c</referenceTo>
    <relationshipLabel>Waste Generated</relationshipLabel>
    <relationshipName>Waste_Generated</relationshipName>
    <type>Lookup</type>
</CustomField>