force-app/main/default/objects/Waste_Generated__c/fields/Recycled__c.field-meta.xml
<CustomField>
    <fullName>Recycled__c</fullName>
    <label>% Recycled</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>