force-app/main/default/objects/Waste_Generated__c/fields/Report_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Report_End_Date__c</fullName>
    <label>Report End Date</label>
    <type>Date</type>
</CustomField>