force-app/main/default/objects/Waste_Generated__c/fields/Scope3EmssnSrc__c.field-meta.xml
<CustomField>
    <fullName>Scope3EmssnSrc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Scope 3 Emissions Source</label>
    <referenceTo>Scope3EmssnSrc</referenceTo>
    <relationshipLabel>Scope3EmssnSrc</relationshipLabel>
    <relationshipName>Scope3EmssnSrc</relationshipName>
    <type>Lookup</type>
</CustomField>