force-app/main/default/objects/Waste_Generated__c/fields/Scope_1_emissions_tCo2e__c.field-meta.xml
<CustomField>
    <fullName>Scope_1_emissions_tCo2e__c</fullName>
    <label>Scope 1 emissions (tCo2e)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>