force-app/main/default/objects/Waste_Generated__c/fields/StnryAssetEnvrSrc__c.field-meta.xml
<CustomField>
    <fullName>StnryAssetEnvrSrc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stationary Asset Environmental Source</label>
    <referenceTo>StnryAssetEnvrSrc</referenceTo>
    <relationshipLabel>StnryAssetEnvrSrc</relationshipLabel>
    <relationshipName>StnryAssetEnvrSrc</relationshipName>
    <type>Lookup</type>
</CustomField>