force-app/main/default/objects/Waste_Generated__c/fields/VehicleAssetEmssnSrc__c.field-meta.xml
<CustomField>
    <fullName>VehicleAssetEmssnSrc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vehicle Asset Emissions Source</label>
    <referenceTo>VehicleAssetEmssnSrc</referenceTo>
    <relationshipLabel>VehicleAssetEmssnSrc</relationshipLabel>
    <relationshipName>VehicleAssetEmssnSrc</relationshipName>
    <type>Lookup</type>
</CustomField>