force-app/main/default/objects/Waste_Generated__c/fields/Waste_Quantity_Disposed_Tonnes__c.field-meta.xml
<CustomField>
    <fullName>Waste_Quantity_Disposed_Tonnes__c</fullName>
    <label>Waste Quantity Disposed (Tonnes)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>