force-app/main/default/objects/Waste_Generated__c/fields/Waste_Type__c.field-meta.xml
<CustomField>
    <fullName>Waste_Type__c</fullName>
    <label>Waste Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>