force-app/main/default/objects/Waste_Generated__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Error_Details__c</columns>
    <columns>Migration_Status__c</columns>
    <columns>Target_SFDC_ID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>